tests/fixtures/invalid/invalid-js.use-strict.mjs
"use strict";

console.log("'use strict' is forbidden in JSM");
